force-app/main/default/objects/Application__c/fields/Conversion_Status__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Status__c</fullName>
    <label>Conversion Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotReady</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Converting</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>