force-app/main/default/objects/Application__c/fields/Converted_At__c.field-meta.xml
<CustomField>
    <fullName>Converted_At__c</fullName>
    <label>Converted At</label>
    <type>DateTime</type>
</CustomField>