force-app/main/default/objects/Application__c/fields/Public_Access_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Public_Access_Expires_At__c</fullName>
    <label>Public Access Expires At</label>
    <type>DateTime</type>
</CustomField>