force-app/main/default/objects/Application__c/fields/Public_Access_Key_Hash__c.field-meta.xml
<CustomField>
    <fullName>Public_Access_Key_Hash__c</fullName>
    <label>Public Access Key Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>