force-app/main/default/objects/Application__c/fields/Scenario_Key__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Key__c</fullName>
    <label>Scenario Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>